#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-74
2016-05-17 Mikhail S. Dubrovin
- Add mask of eight neighbours of unbound pixel if mbits += 16 
M       src/GeometryAccess.py
M       src/GeometryObject.py
M       src/SegGeometryCspad2x1V1.py
	
Tag: V00-02-73
2016-05-05 Mikhail S. Dubrovin
- CalibFileFinder.make_calib_file_name - add protection, create subdirectory, change signature PSAS-148
- GlobalUtils.py - add method create_directory
	
Tag: V00-02-72
2016-05-05 Mikhail S. Dubrovin
- CalibFileFinder.py - add methods makeCalibFileName, find_calib_file and make_calib_file_name PSAS-148

Tag: V00-02-71
2016-04-27 Mikhail S. Dubrovin
- GeometryObject.py change format for angles from %6.1f to %8.3f and test in GeometryAccess
	
Tag: V00-02-70
2016-04-25 Mikhail S. Dubrovin
- in NDArrIO.save_txt add SHAPE and DATATYPE.
	
Tag: V00-02-69
2016-04-14 Mikhail S. Dubrovin
- CalibParsBaseEpix100aV1 - change default common mode parameters from (4,1,20,0) to (4,6,30,30) PSAS-147

Tag: V00-02-68
2016-03-31 Mikhail S. Dubrovin
- GlobalUtils.py - use different methods inside get_login() and get_hostname()

Tag: V00-02-67
2016-03-31 Mikhail S. Dubrovin
- GlobalUtils.py, NDArrIO.py - get rid of calls to get_enviroment(...)

Tag: V00-02-66
2016-03-17 Mikhail S. Dubrovin
- NDArrIO.py - add parameter "addmetad" to save_txt

Tag: V00-02-65
2015-03-05 Mikhail S. Dubrovin
- GeometryObject.py add protection for wrong size and shape 
	in two2x1ToData2x2 and data2x2ToTwo2x1
	
Tag: V00-02-64
2015-02-25 Mikhail S. Dubrovin
- NDArrIO.py - cosmetic improvement in print statement.
	
Tag: V00-02-63
2015-02-22 Mikhail S. Dubrovin